Enviropment map crash #41969

Closed
opened 2014-09-27 08:00:21 +02:00 by Alexey · 7 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
env_map_crash1.png
env_map_crash2.png
env_map_crash3.png
Exact steps for others to reproduce the error
env_bug.blend
open this, select rendered shading mode, multiclick on static or animated - crash

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** ![env_map_crash1.png](https://archive.blender.org/developer/F113043/env_map_crash1.png) ![env_map_crash2.png](https://archive.blender.org/developer/F113045/env_map_crash2.png) ![env_map_crash3.png](https://archive.blender.org/developer/F113047/env_map_crash3.png) **Exact steps for others to reproduce the error** [env_bug.blend](https://archive.blender.org/developer/F113050/env_bug.blend) open this, select rendered shading mode, multiclick on static or animated - crash
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Author

env_map_image_file.blend
open this, select rendered shading mode, click speedly many times on image file button - crash

[env_map_image_file.blend](https://archive.blender.org/developer/F113053/env_map_image_file.blend) open this, select rendered shading mode, click speedly many times on image file button - crash
Sergey Sharybin was assigned by Thomas Dinges 2014-09-27 23:51:33 +02:00

Developer note: this is rather tricky one, mipmaps and environment maps are pre-initialized by the render engine and rendering itself assumes they're always exist and valid. Making changes to the textures might invalidate and free the mipmap/envmaps. Need some smarter ownership here.

Developer note: this is rather tricky one, mipmaps and environment maps are pre-initialized by the render engine and rendering itself assumes they're always exist and valid. Making changes to the textures might invalidate and free the mipmap/envmaps. Need some smarter ownership here.

This issue was referenced by 2218135f67

This issue was referenced by 2218135f67bba61b88ed5657125f73ba69f46bd5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2218135f67.

Closed by commit 2218135f67.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41969
No description provided.